iowow (1.0.4) UNRELEASED; urgency=medium

  * Added IWFSM_SYNC_BMAP option to iwfs_fsm_aflags

 -- Anton Adamansky <adamansky@gmail.com>  Thu, 12 Apr 2018 10:38:26 +0700

iowow (1.0.3) testing; urgency=medium

  * Added basic iowow.3 man page to distribution archive
  * Use posix_fallocate() to extend iwkv file instead of ftruncate() on Linux/FreeBSD

 -- Anton Adamansky <adamansky@gmail.com>  Tue, 10 Apr 2018 18:56:11 +0700

iowow (1.0.2) testing; urgency=medium

  * Removed unneeded -D_LARGE_FILE_SOURCE from iowow.h

 -- Anton Adamansky <adamansky@gmail.com>  Mon, 09 Apr 2018 13:56:53 +0700

iowow (1.0.1) testing; urgency=medium

  * Fix export flags iwlog2 method

 -- Anton Adamansky <adamansky@gmail.com>  Mon, 09 Apr 2018 12:44:23 +0700

iowow (1.0.0) testing; urgency=medium

  * Initial release.

 -- Anton Adamansky <adamansky@gmail.com>  Sun, 08 Apr 2018 14:21:43 +0700